Header Search Button Mobile & some CSS fixes

--- a/style.css
+++ b/style.css
@@ -1285,9 +1285,6 @@ footer {
 	.icon-search-24{
 		display: inline-block;
 	}
-	div#header-search{
-		display: none;
-	}
 	.centered-header{
 		padding-left: 32px;
 		padding-right: 32px;
@@ -1315,15 +1312,44 @@ footer {
     .post-meta-box {
         font-size: 15px;
     }
-    .loop-post-date{
-        margin-left: 8px;
-        padding-left: 8px;
-    }
     main section article{
         padding: 24px;
     }
     #post-comments ul.children{
         padding-left: 45px;
+    }
+    div#header-search{
+		display: none;
+        position: absolute;
+        bottom: -50px;
+        left: 0;
+        right: 0;
+        background: #0e2d60;
+        z-index: 9999;
+        padding: 10px !important;
+    }
+    #header-search form.search{
+        margin-top: 0;
+    }
+    .author-profile-box {
+        padding-right: 0;
+        padding-left: 10px;
+    }
+    .loop-post-date {
+        margin-left: 0;
+        padding-left: 0;
+        padding-right: 10px;
+    }
+    .author-profile-image{
+        margin-right: 30px;
+    }
+    body.single-post h1{
+        font-size: 26px;
+        line-height: 30px;
+    }
+    body.single-post h2{
+        font-size: 22px;
+        line-height: 26px;
     }
 }
 
